👌 IMPROVE: Fix deposit channel dark mode

--- a/src/App.less
+++ b/src/App.less
@@ -78,7 +78,8 @@ body.dark-mode,
 .dark-mode h2,
 .dark-mode h4,
 .dark-mode h5,
-.dark-mode h6 {
+.dark-mode h6,
+.dark-mode p {
   color: silver;
 }
 
@@ -159,13 +160,12 @@ body.dark-mode,
     color: silver;
 }
 
-.dark-mode .display-content, 
-.dark-mode .label-heading {
+.dark-mode .bank-details {
   background-color: #303030;
 }
 
-.dark-mode .bank-details {
-  background-color: #2d2b2b;
+.dark-mode .important-note {
+  color: red;
 }
 
 .dark-mode .ant-form-item-has-error .ant-input-number:not([disabled]):hover,
